--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -6,38 +6,43 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    >
+
+  <TextView
+      android:id="@+id/symbol"
+      style="@style/StockSymbolTextStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="start|center_vertical"
+      tools:text="@string/default_stocks_yahoo"
+      />
+
+  <LinearLayout
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:gravity="end"
+      >
 
     <TextView
-        android:id="@+id/symbol"
-        style="@style/StockSymbolTextStyle"
+        android:id="@+id/price"
+        style="@style/BidPriceTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start|center_vertical"
-        tools:text="GOOG" />
+        android:layout_marginEnd="10sp"
+        tools:text="@string/default_price"
+        />
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/change"
+        style="@style/PercentChangeTextStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="end">
-
-        <TextView
-            android:id="@+id/price"
-            style="@style/BidPriceTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10sp"
-            tools:text="1000.00" />
-
-        <TextView
-            android:id="@+id/change"
-            style="@style/PercentChangeTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/percent_change_pill_green"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            tools:text="100%" />
-    </LinearLayout>
+        android:background="@drawable/percent_change_pill_green"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        tools:text="@string/default_change"
+        />
+  </LinearLayout>
 </LinearLayout>
