--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
         />
 
   </android.support.v4.widget.SwipeRefreshLayout>
@@ -29,7 +29,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="bottom|end"
-      android:layout_margin="16dp"
+      android:layout_margin="@dimen/activity_horizontal_margin"
       android:onClick="button"
       android:src="@drawable/fab_plus"
       android:contentDescription="@string/main_description_fab"
@@ -47,6 +47,6 @@
       android:layout_gravity="center"
       android:textAppearance="@android:style/TextAppearance.Medium"
       android:visibility="gone"
-      tools:text="Error message"
+      tools:text="@string/error_message"
       />
 </merge>
