--- a/app/src/main/res/layout/add_stock_dialog.xml
+++ b/app/src/main/res/layout/add_stock_dialog.xml
@@ -10,8 +10,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/dialog_default_margin"
-      android:layout_marginLeft="@dimen/dialog_default_margin"
-      android:layout_marginRight="@dimen/dialog_default_margin"
+      android:layout_marginStart="@dimen/dialog_default_margin"
+      android:layout_marginEnd="@dimen/dialog_default_margin"
       android:layout_marginTop="@dimen/dialog_top_margin"
       android:hint="@string/dialog_hint"
       android:inputType="textCapCharacters"
